--- a/index.html
+++ b/index.html
@@ -1,229 +1,242 @@
 <link rel="stylesheet" href="/lib/root.css">
 
-<div class="header"></div>
+<div class="header">
+	<svg viewBox="0 0 101 101">
+		<radialGradient id="Background">
+			<stop offset="0%" stop-color="rgba(220, 20, 20, 0.8)" />
+			<stop offset="80%" stop-color="rgba(220, 20, 20, 0.4)" />
+			<stop offset="100%" stop-color="rgba(20, 20, 22, 0)" />
+		</radialGradient>
+		<ellipse cx="50" cy="50" rx="50" ry="50" pathLength="100" />
+	</svg>
+</div>
 
+<h1>Not Quite Jason Tucker</h1>
 <div class="outer">
-    <h1>Not Quite Jason Tucker</h1>
-    <h2>Work History</h2>
-    <div class="cards">
-        <a class="card" href="https://github.com/tucker87/">
-            <div class="card-content">
-                <div class="title">Junior Developer</div>
-                <span class="desc">Venminder (2014)</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                    <icon class="js"></icon>
-                    <icon class="jq"></icon>
-                    <icon class="ko"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/">
-            <div class="card-content">
-                <div class="title">Software Developer</div>
-                <span class="desc">Refund Advantage (2014-2015)</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                    <icon class="vb"></icon>
-                    <icon class="js"></icon>
-                    <icon class="jq"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/">
-            <div class="card-content">
-                <div class="title">Technical Lead</div>
-                <span class="desc">Strategic Marketing (2015-Present)</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                    <icon class="vue"></icon>
-                    <icon class="js"></icon>
-                    <icon class="jq"></icon>
-                </div>
-            </div>
-        </a>
-    </div>
-    <hr/>
-    <h2>Live Projects</h2>
-    <div class="cards">
-        <a class="card live-project" href="CssBattles/">
-            <div class="card-content">
-                <div class="title">CssBattles</div>
-                <span class="desc">Interactive collection of solutions to CSS Battles</span>
-                <div class="icons">
-                    <icon class="css3"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card live-project" href="Kinematics/">
-            <div class="card-content">
-                <div class="title">Kinematics</div>
-                <span class="desc">An example of Inverse Kinematics using P5.js</span>
-                <div class="icons">
-                    <icon class="js"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card live-project" href="TensorFlow1/">
-            <div class="card-content">
-                <div class="title">Regression</div>
-                <span class="desc">TensorFlow Neural Network</span>
-                <div class="icons">
-                    <icon class="js"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card wide live-project" href="https://notquitecbtest.azurewebsites.net">
-            <div class="card-content">
-                <div class="title">Color Vision Test Generator</div>
-                <span class="desc">Generate a color vision test with custom text</span>
-                <div class="icons">
-                    <icon class="c-sharp"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card live-project" href="https://github.com/tucker87/tucker87.github.io">
-            <div class="card-content">
-                <div class="title">This Site</div>
-                <span class="desc">A Github.io page.</span>
-                <div class="icons">
-                    <icon class="js"></icon>
-                    <icon class="css3"></icon>
-                </div>
-            </div>
-        </a>
-    </div>
-    <hr/>
-    <h2>Code Challenges</h2>
-    <h3>Online</h3>
-    <div class="cards">
-        <a class="card" href="https://github.com/tucker87/AdventChallenge2015">
-            <div class="card-content">
-                <div class="title">AdventChallenge2015</div>
-                <span class="desc">Daily Code Challenges</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/HackerRank">
-            <div class="card-content">
-                <div class="title">HackerRank</div>
-                <span class="desc">Some of the early challenges I did on HackerRank.com</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/BowlingKata">
-            <div class="card-content">
-                <div class="title">Bowling Kata</div>
-                <span class="desc">A Kata for learning TDD</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/LeagueApi">
-            <div class="card-content">
-                <div class="title">League API</div>
-                <span class="desc">Integration with League of Legends API for a contest</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                    <icon class="js"></icon>
-                </div>
-            </div>
-        </a>
-    </div>
-
-    <h3>Self-Made</h3>
-    <div class="cards">
-        <a class="card" href="https://github.com/tucker87/CodingKata-Infinites">
-            <div class="card-content">
-                <div class="title">CodingKata-Infinites</div>
-                <span class="desc">A challenge to learn about the yeild keyword in C#</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/FizzBuzzComplex">
-            <div class="card-content">
-                <div class="title">Fizz Buzz Complex</div>
-                <span class="desc">Take basic Fizz Buzz and allow lamda functions for the checks</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                </div>
-            </div>
-        </a>
-    </div>
-    <hr/>
-    <h2>Graveyard (Abandonware)</h2>
-    <div class="cards">
-        <a class="card" href="https://github.com/tucker87/5ECharacterBuilder2">
-            <div class="card-content">
-                <div class="title">D&D 5E Charater Builder</div>
-                <span class="desc">A decorator based character building tool</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/IronLake">
-            <div class="card-content">
-                <div class="title">Iron Lake</div>
-                <span class="desc">My attempt at making a game engine (ended up with basically Unity Game Objects)</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/LinkedTracker">
-            <div class="card-content">
-                <div class="title">Linked Tracker</div>
-                <span class="desc">Websocket based multiplayer tracker for A Link to the Past Randomizer</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="c-sharp"></icon>
-                    <icon class="vue"></icon>
-                    <icon class="js"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/SpecterOps">
-            <div class="card-content">
-                <div class="title">Specter Ops</div>
-                <span class="desc">Digital map for the board game Specter Ops</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="js"></icon>
-                    <icon class="c-sharp"></icon>
-                </div>
-            </div>
-        </a>
-        <a class="card" href="https://github.com/tucker87/TickerFetch">
-            <div class="card-content">
-                <div class="title">Ticker Fetch</div>
-                <span class="desc">Tool for pulling in Stock and Crypto prices into an Excel sheet (This has been moved to Google Sheets)</span>
-                <div class="icons">
-                    <icon class="github"></icon>
-                    <icon class="js"></icon>
-                </div>
-            </div>
-        </a>
-    </div>
-    <hr/>
+	<section>
+		<h2>Work History</h2>
+		<div class="cards">
+			<a class="card" href="https://github.com/tucker87/">
+				<div class="card-content">
+					<div class="title">Junior Developer</div>
+					<span class="desc">Venminder (2014)</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+						<icon class="js"></icon>
+						<icon class="jq"></icon>
+						<icon class="ko"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/">
+				<div class="card-content">
+					<div class="title">Software Developer</div>
+					<span class="desc">Refund Advantage (2014-2015)</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+						<icon class="vb"></icon>
+						<icon class="js"></icon>
+						<icon class="jq"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/">
+				<div class="card-content">
+					<div class="title">Technical Lead</div>
+					<span class="desc">Strategic Marketing (2015-Present)</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+						<icon class="vue"></icon>
+						<icon class="js"></icon>
+						<icon class="jq"></icon>
+					</div>
+				</div>
+			</a>
+		</div>
+	</section>
+	<section>
+		<h2>Live Projects</h2>
+		<div class="cards">
+			<a class="card live-project" href="CssBattles/">
+				<div class="card-content">
+					<div class="title">CssBattles</div>
+					<span class="desc">Interactive collection of solutions to CSS Battles</span>
+					<div class="icons">
+						<icon class="css3"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card live-project" href="Kinematics/">
+				<div class="card-content">
+					<div class="title">Kinematics</div>
+					<span class="desc">An example of Inverse Kinematics using P5.js</span>
+					<div class="icons">
+						<icon class="js"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card live-project" href="TensorFlow1/">
+				<div class="card-content">
+					<div class="title">Regression</div>
+					<span class="desc">TensorFlow Neural Network</span>
+					<div class="icons">
+						<icon class="js"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card wide live-project" href="https://notquitecbtest.azurewebsites.net">
+				<div class="card-content">
+					<div class="title">Color Vision Test Generator</div>
+					<span class="desc">Generate a color vision test with custom text</span>
+					<div class="icons">
+						<icon class="c-sharp"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card live-project" href="https://github.com/tucker87/tucker87.github.io">
+				<div class="card-content">
+					<div class="title">This Site</div>
+					<span class="desc">A Github.io page.</span>
+					<div class="icons">
+						<icon class="js"></icon>
+						<icon class="css3"></icon>
+					</div>
+				</div>
+			</a>
+		</div>
+	</section>
+	<section>
+		<h2>Code Challenges</h2>
+		<h3>Online</h3>
+		<div class="cards">
+			<a class="card" href="https://github.com/tucker87/AdventChallenge2015">
+				<div class="card-content">
+					<div class="title">AdventChallenge2015</div>
+					<span class="desc">Daily Code Challenges</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/HackerRank">
+				<div class="card-content">
+					<div class="title">HackerRank</div>
+					<span class="desc">Some of the early challenges I did on HackerRank.com</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/BowlingKata">
+				<div class="card-content">
+					<div class="title">Bowling Kata</div>
+					<span class="desc">A Kata for learning TDD</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/LeagueApi">
+				<div class="card-content">
+					<div class="title">League API</div>
+					<span class="desc">Integration with League of Legends API for a contest</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+						<icon class="js"></icon>
+					</div>
+				</div>
+			</a>
+		</div>
+		<h3>Self-Made</h3>
+		<div class="cards">
+			<a class="card" href="https://github.com/tucker87/CodingKata-Infinites">
+				<div class="card-content">
+					<div class="title">CodingKata-Infinites</div>
+					<span class="desc">A challenge to learn about the yeild keyword in C#</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/FizzBuzzComplex">
+				<div class="card-content">
+					<div class="title">Fizz Buzz Complex</div>
+					<span class="desc">Fizz Buzz but allow lamda functions for the checks</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+					</div>
+				</div>
+			</a>
+		</div>
+	</section>
+	<section>
+		<h2>Graveyard (Abandonware)</h2>
+		<div class="cards">
+			<a class="card" href="https://github.com/tucker87/5ECharacterBuilder2">
+				<div class="card-content">
+					<div class="title">D&D 5E Charater Builder</div>
+					<span class="desc">A decorator based character building tool</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/IronLake">
+				<div class="card-content">
+					<div class="title">Iron Lake</div>
+					<span class="desc">A game engine</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/LinkedTracker">
+				<div class="card-content">
+					<div class="title">Linked Tracker</div>
+					<span class="desc">Multiplayer tracker for A Link to the Past
+						Randomizer</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="c-sharp"></icon>
+						<icon class="vue"></icon>
+						<icon class="js"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/SpecterOps">
+				<div class="card-content">
+					<div class="title">Specter Ops</div>
+					<span class="desc">Digital map for the board game Specter Ops</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="js"></icon>
+						<icon class="c-sharp"></icon>
+					</div>
+				</div>
+			</a>
+			<a class="card" href="https://github.com/tucker87/TickerFetch">
+				<div class="card-content">
+					<div class="title">Ticker Fetch</div>
+					<span class="desc">Pull Stock and Crypto prices into an Excel sheet</span>
+					<div class="icons">
+						<icon class="github"></icon>
+						<icon class="js"></icon>
+					</div>
+				</div>
+			</a>
+		</div>
+	</section>
 </div>
 
 <div class="footer"></div>
