--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="/lib/root.css">
 
 <h1>Not Quite Jason Tucker</h1>
